@@ -11,6 +11,7 @@ import com.yahoo.vdslib.state.State;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
@@ -128,7 +129,7 @@ public class EventDiffCalculator {
                 // distributionConfigTo must be non-null
                 events.add(createClusterEvent(
                         "Cluster controller is now the authoritative source for distribution config. " +
-                        "Active config: %s".formatted(params.distributionConfigTo.highLevelDescription()), params));
+                        String.format(Locale.ROOT, "Active config: %s", params.distributionConfigTo.highLevelDescription()), params));
             } else if (params.distributionConfigTo == null) {
                 events.add(createClusterEvent(
                         "Cluster controller is no longer the authoritative source for distribution config", params));
@@ -136,7 +137,7 @@ public class EventDiffCalculator {
                 // Distribution config was present in both old and new; emit a human-readable diff.
                 String configDiff = DistributionDiffCalculator.computeDiff(params.distributionConfigFrom, params.distributionConfigTo).toString();
                 if (!configDiff.isEmpty()) {
-                    events.add(createClusterEvent("Distribution config changed: %s".formatted(configDiff), params));
+                    events.add(createClusterEvent(String.format(Locale.ROOT, "Distribution config changed: %s", configDiff), params));
                 }
             }
         }
@@ -146,7 +147,7 @@ public class EventDiffCalculator {
         // TODO should we emit any events when description changes?
         if (feedBlockStateHasChanged(params)) {
             if (params.feedBlockTo != null) {
-                events.add(createClusterEvent(String.format("Cluster feed blocked due to resource exhaustion: %s",
+                events.add(createClusterEvent(String.format(Locale.ROOT, "Cluster feed blocked due to resource exhaustion: %s",
                         params.feedBlockTo.getDescription()), params));
             } else {
                 events.add(createClusterEvent("Cluster feed no longer blocked", params));
@@ -220,11 +221,11 @@ public class EventDiffCalculator {
 
         for (var ex : setSubtraction(fromBlockSet, toBlockSet)) {
             var info = cluster.getNodeInfo(ex.node);
-            events.add(createNodeEvent(info, String.format("Removed resource exhaustion: %s", ex.toExhaustionRemovedDescription()), params));
+            events.add(createNodeEvent(info, String.format(Locale.ROOT, "Removed resource exhaustion: %s", ex.toExhaustionRemovedDescription()), params));
         }
         for (var ex : setSubtraction(toBlockSet, fromBlockSet)) {
             var info = cluster.getNodeInfo(ex.node);
-            events.add(createNodeEvent(info, String.format("Added resource exhaustion: %s", ex.toExhaustionAddedDescription()), params));
+            events.add(createNodeEvent(info, String.format(Locale.ROOT, "Added resource exhaustion: %s", ex.toExhaustionAddedDescription()), params));
         }
     }
 
@@ -246,10 +247,10 @@ public class EventDiffCalculator {
             } else if (isMayHaveMergesPendingDownEdge(prevReason, currReason)) {
                 events.add(createNodeEvent(info, "Node no longer has merges pending", params));
             } else if (isMaintenanceGracePeriodExceededDownEdge(prevReason, currReason, nodeFrom, nodeTo)) {
-                events.add(createNodeEvent(info, String.format("Exceeded implicit maintenance mode grace period of " +
+                events.add(createNodeEvent(info, String.format(Locale.ROOT, "Exceeded implicit maintenance mode grace period of " +
                         "%d milliseconds. Marking node down.", params.maxMaintenanceGracePeriodTimeMs), params));
             }
-            events.add(createNodeEvent(info, String.format("Altered node state in cluster state from '%s' to '%s'",
+            events.add(createNodeEvent(info, String.format(Locale.ROOT, "Altered node state in cluster state from '%s' to '%s'",
                     nodeFrom.toString(true), nodeTo.toString(true)), params));
         }
     }
