@@ -5,6 +5,7 @@ import com.yahoo.vespa.clustercontroller.core.hostinfo.HostInfo;
 
 import java.util.Collection;
 import java.util.LinkedHashSet;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -79,7 +80,7 @@ public class ResourceExhaustionCalculator {
 
     public static String decoratedMessage(ContentCluster cluster, String msg) {
         // Disambiguate content cluster and add a user-friendly documentation link to the error message
-        return "in content cluster '%s': %s. See https://docs.vespa.ai/en/writing/feed-block.html".formatted(cluster.getName(), msg);
+        return String.format(Locale.ROOT, "in content cluster '%s': %s. See https://docs.vespa.ai/en/writing/feed-block.html", cluster.getName(), msg);
     }
 
     public ClusterStateBundle.FeedBlock inferContentClusterFeedBlockOrNull(ContentCluster cluster) {
@@ -97,7 +98,7 @@ public class ResourceExhaustionCalculator {
                 .map(NodeResourceExhaustion::toExhaustionAddedDescription)
                 .collect(Collectors.joining(", "));
         if (exhaustions.size() > maxDescriptions) {
-            description += String.format(" (... and %d more)", exhaustions.size() - maxDescriptions);
+            description += String.format(Locale.ROOT, " (... and %d more)", exhaustions.size() - maxDescriptions);
         }
         description = decoratedMessage(cluster, description);
         // FIXME we currently will trigger a cluster state recomputation even if the number of
