@@ -50,8 +50,7 @@ public class RestartOnDeployForOnnxModelChangesValidator implements ChangeValida
             if (enoughMemoryToAvoidRestart(clusterInCurrentModel, cluster, context.deployState().getDeployLogger()))
                 continue;
 
-            log.log(FINE, "Validating %s, current Onnx models:%s, next Onnx models:%s"
-                    .formatted(cluster, currentModels, nextModels));
+            log.log(FINE, String.format(java.util.Locale.ROOT, "Validating %s, current Onnx models:%s, next Onnx models:%s", cluster, currentModels, nextModels));
             validateModelChanges(cluster, currentModels, nextModels).forEach(context::require);
             validateSetOfModels(cluster, currentModels, nextModels).forEach(context::require);
         }
@@ -65,8 +64,7 @@ public class RestartOnDeployForOnnxModelChangesValidator implements ChangeValida
             if (! currentModels.containsKey(nextModelInfo.modelId())) continue;
 
             modelChanged(nextModelInfo, currentModels.get(nextModelInfo.modelId())).ifPresent(change -> {
-                String message = "Onnx model '%s' has changed (%s), need to restart services in %s"
-                        .formatted(nextModelInfo.modelId(), change, cluster);
+                String message = String.format(java.util.Locale.ROOT, "Onnx model '%s' has changed (%s), need to restart services in %s", nextModelInfo.modelId(), change, cluster);
                 setRestartOnDeployAndAddRestartAction(actions, cluster, message);
             });
         }
@@ -79,17 +77,16 @@ public class RestartOnDeployForOnnxModelChangesValidator implements ChangeValida
         List<ConfigChangeAction> actions = new ArrayList<>();
         Set<String> currentModelIds = currentModels.keySet();
         Set<String> nextModelIds = nextModels.keySet();
-        log.log(FINE, "Checking if Onnx model set has changed (%s) -> (%s)".formatted(currentModelIds, nextModelIds));
+        log.log(FINE, String.format(java.util.Locale.ROOT, "Checking if Onnx model set has changed (%s) -> (%s)", currentModelIds, nextModelIds));
         if (! currentModelIds.equals(nextModelIds)) {
-            String message = "Onnx model set has changed from %s to %s, need to restart services in %s"
-                    .formatted(currentModelIds, nextModelIds, cluster);
+            String message = String.format(java.util.Locale.ROOT, "Onnx model set has changed from %s to %s, need to restart services in %s", currentModelIds, nextModelIds, cluster);
             setRestartOnDeployAndAddRestartAction(actions, cluster, message);
         }
         return actions;
     }
 
     private Optional<String> modelChanged(OnnxModelCost.ModelInfo a, OnnxModelCost.ModelInfo b) {
-        log.log(FINE, "Checking if model has changed (%s) -> (%s)".formatted(a, b));
+        log.log(FINE, String.format(java.util.Locale.ROOT, "Checking if model has changed (%s) -> (%s)", a, b));
         if (a.estimatedCost() != b.estimatedCost()) return Optional.of("estimated cost");
         if (a.hash() != b.hash()) return Optional.of("model hash");
         if (! a.onnxModelOptions().equals(b.onnxModelOptions())) return Optional.of("model option(s)");
@@ -119,23 +116,18 @@ public class RestartOnDeployForOnnxModelChangesValidator implements ChangeValida
         var availableMemoryPercentage = cluster.heapSizePercentageOfAvailable();
         int memoryPercentage = (int) (availableMemory / totalMemory * availableMemoryPercentage);
 
-        var prefix = "Validating Onnx models memory usage for %s".formatted(cluster);
+        var prefix = String.format(java.util.Locale.ROOT, "Validating Onnx models memory usage for %s", cluster);
         if (memoryPercentage < percentLimit) {
-            deployLogger.log(INFO, ("%s, percentage of available memory " +
-                    "too low (%d < %d) to avoid restart, consider a flavor with more memory to avoid this")
-                    .formatted(prefix, memoryPercentage, percentLimit));
+            deployLogger.log(INFO, String.format(java.util.Locale.ROOT, "%s, percentage of available memory too low (%d < %d) to avoid restart, consider a flavor with more memory to avoid this", prefix, memoryPercentage, percentLimit));
             return false;
         }
 
         if (availableMemory < gbLimit) {
-            deployLogger.log(INFO, ("%s, available memory too low "
-                             + "(%.2f Gb < %.2f Gb) to avoid restart, consider a flavor with more memory to avoid this")
-                    .formatted(prefix, availableMemory, gbLimit));
+            deployLogger.log(INFO, String.format(java.util.Locale.ROOT, "%s, available memory too low (%.2f Gb < %.2f Gb) to avoid restart, consider a flavor with more memory to avoid this", prefix, availableMemory, gbLimit));
             return false;
         }
 
-        log.log(FINE, "%s, enough available memory (%.2f Gb) to avoid restart (models use %.2f Gb)"
-                .formatted(prefix, availableMemory, memoryUsedByModels));
+        log.log(FINE, String.format(java.util.Locale.ROOT, "%s, enough available memory (%.2f Gb) to avoid restart (models use %.2f Gb)", prefix, availableMemory, memoryUsedByModels));
         return true;
     }
 
