@@ -3,6 +3,7 @@ package com.yahoo.vespa.model.application.validation.change;
 
 import com.yahoo.config.model.api.ConfigChangeAction;
 import com.yahoo.config.model.deploy.DeployState;
+import com.yahoo.config.model.deploy.TestDeployState;
 import com.yahoo.config.model.deploy.TestProperties;
 import com.yahoo.vespa.model.VespaModel;
 import com.yahoo.vespa.model.application.validation.ValidationTester;
@@ -46,7 +47,7 @@ public class RestartOnDeployForLocalLLMValidatorTest {
     }
 
     private static VespaModel createModel(String component) {
-        var xml = """
+        var xml = String.format(java.util.Locale.ROOT, """
                 <services version='1.0'>
                   <container id='cluster1' version='1.0'>
                     <http>
@@ -55,7 +56,7 @@ public class RestartOnDeployForLocalLLMValidatorTest {
                     %s
                   </container>
                 </services>
-                """.formatted(component);
+                """, component);
         DeployState.Builder builder = deployStateBuilder();
         return new VespaModelCreatorWithMockPkg(null, xml).create(builder);
     }
@@ -65,11 +66,11 @@ public class RestartOnDeployForLocalLLMValidatorTest {
     }
 
     private static String withComponent(String componentClass) {
-        return "<component id='llm' class='%s' />".formatted(componentClass);
+        return String.format(java.util.Locale.ROOT, "<component id='llm' class='%s' />", componentClass);
     }
 
     private static DeployState.Builder deployStateBuilder() {
-        return new DeployState.Builder().properties(new TestProperties());
+        return TestDeployState.createBuilder();
     }
 
     private static void assertStartsWith(String expected, List<ConfigChangeAction> result) {
