@@ -7,6 +7,7 @@ import com.yahoo.config.model.api.ApplicationClusterEndpoint;
 import com.yahoo.config.model.api.ContainerEndpoint;
 import com.yahoo.config.model.api.ModelContext;
 import com.yahoo.config.model.deploy.DeployState;
+import com.yahoo.config.model.deploy.TestDeployState;
 import com.yahoo.config.model.deploy.TestProperties;
 import com.yahoo.config.model.provision.InMemoryProvisioner;
 import com.yahoo.config.model.provision.SingleNodeProvisioner;
@@ -169,10 +170,7 @@ public class ContentClusterTest extends ContentBaseTest {
                 messages.add(message);
             }
         };
-        var deployState = new DeployState.Builder()
-                .applicationPackage(new MockApplicationPackage.Builder().withServices(services).build())
-                .deployLogger(logger)
-                .build();
+        var deployState = TestDeployState.create(logger, new MockApplicationPackage.Builder().withServices(services).build());
         new TestDriver().buildModel(deployState);
         assertEquals(1, messages.size());
         assertEquals("In cluster 'storage': min-node-ratio-per-group should be set to 1 when there are 3 or more groups (3)" +
@@ -735,7 +733,7 @@ public class ContentClusterTest extends ContentBaseTest {
         assertDistributionBitsInConfig(root.getConfigModels(Content.class).get(0).getCluster(), 8);
 
         // Build model and supply previous model that was a model built with 5 nodes
-        var deployState = new DeployState.Builder().applicationPackage(appTwoNodes).previousModel(modelForAppWithFiveNodes).build();
+        var deployState = TestDeployState.createBuilder().applicationPackage(appTwoNodes).previousModel(modelForAppWithFiveNodes).build();
         root = new TestDriver().buildModel(deployState);
         // But reducing number of nodes for a running system should not change distribution bits (should still be 16 bits)
         assertDistributionBitsInConfig(root.getConfigModels(Content.class).get(0).getCluster(), 16);
@@ -1000,16 +998,6 @@ public class ContentClusterTest extends ContentBaseTest {
         assertPrepareRestartCommand(createClusterWithFlushOnShutdownOverride(true, true));
     }
 
-    @Test
-    void flush_on_shutdown_follows_feature_flag_for_use_new_prepare_for_restart() throws Exception {
-        assertNoPreShutdownCommand(createOneNodeCluster(new TestProperties().setHostedVespa(true).useNewPrepareForRestart(true)));
-        assertPrepareRestartCommand(createOneNodeCluster(new TestProperties().setHostedVespa(true).useNewPrepareForRestart(false)));
-
-        // Always flush on non-hosted
-        assertPrepareRestartCommand(createOneNodeCluster(new TestProperties().setHostedVespa(false).useNewPrepareForRestart(true)));
-        assertPrepareRestartCommand(createOneNodeCluster(new TestProperties().setHostedVespa(false).useNewPrepareForRestart(false)));
-    }
-
     private static String oneNodeClusterXml() {
         return "<content version=\"1.0\" id=\"mockcluster\">" +
                 "  <redundancy>3</redundancy>" +
@@ -1059,7 +1047,7 @@ public class ContentClusterTest extends ContentBaseTest {
                                                        Optional<Flavor> flavor, StringBuffer deployWarningsBuffer) throws Exception {
         DeployLogger logger = (level, message) -> {
             if (level == Level.WARNING) { // only care about warnings
-                deployWarningsBuffer.append("%s\n".formatted(message));
+                deployWarningsBuffer.append(String.format(java.util.Locale.ROOT, "%s\n", message));
             }
         };
         DeployState.Builder deployStateBuilder = new DeployState.Builder()
@@ -1559,15 +1547,15 @@ public class ContentClusterTest extends ContentBaseTest {
         // sentinel value that must never be used by actual nodes.
         for (int distKey : List.of(-1, 65535, 65536, 100000)) {
             assertThrows(IllegalArgumentException.class, () ->
-                    parse("""
+                    parse(String.format(java.util.Locale.ROOT, """
                             <content version="1.0" id="storage">
                               <documents/>
                               <redundancy>1</redundancy>
                               <group>
                                 <node hostalias='mockhost' distribution-key='%d' />
                               </group>
-                            </content>""".formatted(distKey)
-                        ));
+                            </content>""", distKey))
+                        );
         }
     }
 
@@ -1586,7 +1574,7 @@ public class ContentClusterTest extends ContentBaseTest {
                "  <redundancy>1</redundancy>" +
                "  <documents/>" +
                "  <group>" +
-               "    <node distribution-key=\"%d\" hostalias=\"mockhost\"/>".formatted(key) +
+               String.format(java.util.Locale.ROOT, "    <node distribution-key=\"%d\" hostalias=\"mockhost\"/>", key) +
                "  </group>" +
                "</content>";
     }
@@ -1763,7 +1751,7 @@ public class ContentClusterTest extends ContentBaseTest {
     }
 
     private String servicesWithGroups(int groupCount, double minGroupUpRatio) {
-        String services = String.format("<?xml version='1.0' encoding='UTF-8' ?>" +
+        String services = String.format(java.util.Locale.ROOT, "<?xml version='1.0' encoding='UTF-8' ?>" +
                 "<services version='1.0'>" +
                 "  <container id='default' version='1.0' />" +
                 "  <content id='storage' version='1.0'>" +
@@ -1782,7 +1770,7 @@ public class ContentClusterTest extends ContentBaseTest {
         };
         services += distribution;
         for (int i = 0; i < groupCount; i++) {
-            services += String.format("    <group name='g-%d' distribution-key='%d'>" +
+            services += String.format(java.util.Locale.ROOT, "    <group name='g-%d' distribution-key='%d'>" +
                                               "      <node hostalias='mockhost' distribution-key='%d'/>" +
                                               "    </group>",
                                       i, i, i);
